# spef-check

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  example.spef  print_action.hpp  run_benchmark.sh  run_tests.sh  spef-check.cpp  spef_actions.cpp  spef_actions.hpp  spef_check.cpp  spef_structs.hpp
benchmark/: iso_example.spef
examples/: 00-hello_world.cpp  00-hello_world.hpp  01-analyze_grammar.cpp  02-tracer.cpp  03-error_handling.cpp  04-integer.cpp  CMakeLists.txt
src/: CMakeLists.txt  file_reader.hpp  spef_actions.cpp  spef_actions.hpp  spef_check.cpp  spef_random.hpp  spef_structs.hpp  spef_write.hpp  test_reader.cpp
